<resources>
    <string name="app_name">Football League</string>
    <string name="connection_failed">connection failed, please check your connection</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="loading">Loading</string>
    <string name="no_of_available_seasons">No. of available seasons:</string>
    <string name="demo">Hello</string>
    <string name="no_items_found">No items found</string>
    <string name="retry">Retry</string>
    <string name="short_name">Short name:</string>
    <string name="position">Position</string>
    <string name="nationality">Nationality</string>
    <string name="address">Address:</string>
    <string name="website">WebSite</string>
    <string name="email">Email:</string>
    <string name="list_of_players">Players:</string>
    <string name="favorite_item">Add to favorite.</string>
</resources>
