<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="com.aya.footballleague.ui.main.leaguesList.teamsList.teamDetails.TeamDetailsViewModel" />
    </data>

    <androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.main.leaguesList.teamsList.teamDetails.TeamDetailsFragment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iv_image"
                android:layout_width="@dimen/_80sdp"
                android:layout_height="@dimen/_80sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:scaleType="centerInside"
                app:imageUrl="@{viewModel.image}" />

            <TextView
                android:id="@+id/tv_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:text="@{viewModel.name}"
                android:textAlignment="viewStart"
                android:textColor="@android:color/black"
                tools:text="@string/demo" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:padding="@dimen/_5sdp"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/short_name"
                    android:textAlignment="viewStart"
                    android:textColor="@android:color/black" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:text="@{viewModel.shortName}"
                    android:textAlignment="viewStart"
                    android:textColor="@android:color/black"
                    tools:text="short" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:padding="@dimen/_5sdp"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/website"
                    android:textAlignment="viewStart"
                    android:textColor="@android:color/black" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:text="@{viewModel.website}"
                    android:textAlignment="viewStart"
                    android:textColor="@android:color/black"
                    tools:text="website" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:padding="@dimen/_5sdp"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/email"
                    android:textAlignment="viewStart"
                    android:textColor="@android:color/black" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:text="@{viewModel.email}"
                    android:textAlignment="viewStart"
                    android:textColor="@android:color/black"
                    tools:text="email" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/_5sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/address"
                    android:textAlignment="viewStart"
                    android:textColor="@android:color/black" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:text="@{viewModel.address}"
                    android:textAlignment="viewStart"
                    android:textColor="@android:color/black"
                    tools:text="address" />
            </LinearLayout>

            <Button
                android:layout_width="@dimen/_100sdp"
                android:layout_height="@dimen/_35sdp"
                android:textColor="@android:color/white"
                android:background="@color/colorPrimaryDark"
                android:text="@{viewModel.addToFav}"
                android:textAllCaps="false"
                android:onClick="@{() -> viewModel.addToFavourite()}"
                android:textAlignment="center"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_gravity="center" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginStart="@dimen/_5sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:text="@string/list_of_players"
                android:textAlignment="viewStart"
                android:textColor="@android:color/black" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_players"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:visibility="@{viewModel.isLoading ? View.GONE : View.VISIBLE}"
                app:adapter="@{viewModel.players}"
                tools:listitem="@layout/player_item"
                android:layout_marginBottom="@dimen/_10sdp"/>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</layout>
