<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="com.aya.footballleague.ui.adapters.PlayerItemViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/_5sdp"
        android:layout_marginStart="@dimen/_5sdp"
        android:layout_marginEnd="@dimen/_5sdp"
        android:layout_width="match_parent"
        android:background="@color/cardview_dark_background"
        android:padding="@dimen/_20sdp"
        android:layout_height="wrap_content">



        <TextView
            android:id="@+id/tv_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            tools:text="@string/demo"
            android:text="@{viewModel.name}"
            android:textAlignment="viewStart"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/tv_position"
            android:layout_width="@dimen/_80sdp"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:text="@string/position"
            android:textAlignment="viewStart"
            android:layout_marginTop="@dimen/_5sdp"
            app:layout_constraintTop_toBottomOf="@id/tv_name"
            app:layout_constraintStart_toStartOf="parent" />


        <TextView
            android:id="@+id/tv_position_value"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            tools:text="Defender"
            android:text="@{viewModel.position}"
            android:textAlignment="viewStart"
            android:layout_marginTop="@dimen/_5sdp"
            app:layout_constraintTop_toBottomOf="@id/tv_name"
            app:layout_constraintStart_toEndOf="@id/tv_position"
            android:layout_marginStart="@dimen/_10sdp"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/tv_nationality"
            android:layout_width="@dimen/_80sdp"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:text="@string/nationality"
            android:textAlignment="viewStart"
            android:layout_marginTop="@dimen/_5sdp"
            app:layout_constraintTop_toBottomOf="@id/tv_position"
            app:layout_constraintStart_toStartOf="parent" />


        <TextView
            android:id="@+id/tv_nationality_value"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            tools:text="Defender"
            android:text="@{viewModel.nationality}"
            android:textAlignment="viewStart"
            android:layout_marginTop="@dimen/_5sdp"
            app:layout_constraintTop_toBottomOf="@id/tv_position"
            app:layout_constraintStart_toEndOf="@id/tv_nationality"
            android:layout_marginStart="@dimen/_10sdp"
            app:layout_constraintEnd_toEndOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>